Fix some alignment issues, move summary text to left column

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -2,7 +2,7 @@
 
 body {
   padding:50px;
-  font:14px/1.5 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font:16px/1.5 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
   color:#777;
   font-weight:300;
 }
@@ -57,17 +57,16 @@ a small {
   display:block;
 }
 
-.project-section{
-  box-sizing: border-box;
+.project-section{ 
   border-top: 2px solid white;
   border-left: 2px solid white;
   border-bottom: 2px solid white;
-  padding: 5px;
+  padding: 5px 0 5px 5px;
   transition: border .05s linear;
 }
 
 .project-section:hover{
-  padding: 5px;
+  padding: 5px 0 5px 5px;
   border-top: 2px solid black;
   border-left: 2px solid #888;
   border-bottom: 2px solid white;
@@ -234,7 +233,7 @@ footer {
   width:270px;
   float:left;
   position:fixed;
-  bottom:50px;
+  bottom:0px;
 }
 
 @media print, screen and (max-width: 960px) {
@@ -250,9 +249,6 @@ footer {
     width:auto;
   }
 
-  header {
-    padding-right:320px;
-  }
 
   section {
     border:1px solid #e5e5e5;
@@ -270,6 +266,52 @@ footer {
     right:50px;
     top:52px;
   }
+  
+  .preview-container{
+    position: relative;
+  }
+
+  .link-preview{
+    position: absolute;
+    left: 0px;
+    top: -300px;
+    opacity: 0;
+    z-index: 5;
+    height: 0;
+    width: 0;
+  }
+
+  .link-preview img{
+    width: 100%;
+    height: auto;
+  }
+
+  .preview-container:hover .link-preview{
+    opacity: 1;
+    transition: opacity .5s linear;
+    width: 450px;
+    height: 280px;
+    overflow: hidden;
+  }
+  
+  .project-section{ 
+    border-top: 2px solid white;
+    border-left: 0;
+    border-bottom: 2px solid white;
+    padding: 0px;
+    background: white;
+    transition: border .05s linear, background .05s linear;
+  }
+
+  .project-section:hover{
+    padding: 0px;
+    border-top: 2px solid black;
+    border-left: 0;
+    border-bottom: 2px solid black;
+    background: #FAFBEA;
+    transition: border .05s linear, background .05s linear;
+  }
+  
 }
 
 @media print, screen and (max-width: 720px) {
